# etl_ocaml_prog_func

./: README.md
projeto_etl/: dune-project  projeto_etl.opam
projeto_etl/_build/: .db  .digest-db  log
projeto_etl/_build/default/: projeto_etl.dune-package  projeto_etl.install
projeto_etl/_build/default/.dune/: configurator  configurator.v2
projeto_etl/_build/default/lib/: data_processing_functions.ml  data_processing_functions.mli  etl_lib.cma  etl_lib.cmxa  etl_lib.cmxs  etl_lib.ml-gen  order_functions.ml  order_item_functions.ml  projeto_etl.cma  projeto_etl.cmxa  projeto_etl.cmxs  projeto_etl.ml-gen  types.ml
projeto_etl/_build/default/lib/.etl_lib.objs/: etl_lib__Etl.impl.d  etl_lib__Etl.intf.d  etl_lib__Order_functions.impl.d  etl_lib__Order_item_functions.impl.d
projeto_etl/_build/default/lib/.merlin-conf/: lib-etl_lib  lib-projeto_etl
projeto_etl/_build/default/lib/.projeto_etl.objs/: projeto_etl__Data_processing_functions.impl.d  projeto_etl__Data_processing_functions.intf.d  projeto_etl__Order_functions.impl.d  projeto_etl__Order_item_functions.impl.all-deps  projeto_etl__Order_item_functions.impl.d  projeto_etl__Output_functions.impl.all-deps  projeto_etl__Output_functions.impl.d
projeto_etl/_build/default/test/: oUnit-Testes para funções puras selecionadas.cache
projeto_etl/_build/default/test/.merlin-conf/: exe-test_projeto_etl
projeto_etl/lib/: data_processing_functions.ml  dune  etl.ml  etl.mli  order_functions.ml  order_item_functions.ml  output_functions.ml
projeto_etl/test/: dune  test_projeto_etl.ml
(+45 files in other folders)
