(lang dune 3.17)

(name projeto_etl)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name <author@example.com>")

(maintainers "Maintainer Name <maintainer@example.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name projeto_etl)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends
  ocaml
  ounit2
  csv)
 (tags
  ("add topics" "to describe" your project)))
